# book_summarizer

./: README.md  project_plan.md
backend/: .env  .env.template  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/services/: book_service.py  llm_service.py
backend/app/tests/: test_book_service.py  test_main.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/api/: bookApi.js
frontend/src/components/: Footer.jsx  Header.jsx
frontend/src/pages/: AboutPage.jsx  BookDetailPage.jsx  BookListPage.jsx  HomePage.jsx
